<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white" >

    <TextView
        android:id="@+id/home_context"
        android:layout_width="293dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/home"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/work_context"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Divider between home and work -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        app:layout_constraintTop_toBottomOf="@id/home_context" />

    <TextView
        android:id="@+id/work_context"
        android:layout_width="293dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/work"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/school_context"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_context" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        app:layout_constraintTop_toBottomOf="@id/work_context"/>

    <TextView
        android:id="@+id/school_context"
        android:layout_width="293dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/school"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/errands_context"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/work_context" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        app:layout_constraintTop_toBottomOf="@id/school_context"/>

    <TextView
        android:id="@+id/errands_context"
        android:layout_width="293dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/errands"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cancel_context"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/school_context" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        app:layout_constraintTop_toBottomOf="@id/errands_context"/>

    <TextView
        android:id="@+id/cancel_context"
        android:layout_width="293dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errands_context" />

</androidx.constraintlayout.widget.ConstraintLayout>