<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/today_action"
        android:layout_width="293dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/move_to_today"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tomorrow_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Divider between today and tomorrow -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        app:layout_constraintTop_toBottomOf="@id/today_action"/>

    <TextView
        android:id="@+id/tomorrow_action"
        android:layout_width="293dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/move_to_tomorrow"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/finish_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_action" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        app:layout_constraintTop_toBottomOf="@id/tomorrow_action"/>

    <TextView
        android:id="@+id/finish_action"
        android:layout_width="293dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/finish"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/delete_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tomorrow_action" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        app:layout_constraintTop_toBottomOf="@id/finish_action"/>

    <TextView
        android:id="@+id/delete_action"
        android:layout_width="293dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/delete"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finish_action" />

</androidx.constraintlayout.widget.ConstraintLayout>