<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/today_view_option"
        android:layout_width="293dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/today"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tomorrow_view_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Divider between today and tomorrow -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        app:layout_constraintTop_toBottomOf="@id/today_view_option"/>

    <TextView
        android:id="@+id/tomorrow_view_option"
        android:layout_width="293dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/tomorrow"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/pending_view_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_view_option" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        app:layout_constraintTop_toBottomOf="@id/tomorrow_view_option"/>

    <TextView
        android:id="@+id/pending_view_option"
        android:layout_width="293dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/pending"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recurring_view_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tomorrow_view_option" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        app:layout_constraintTop_toBottomOf="@id/pending_view_option"/>

    <TextView
        android:id="@+id/recurring_view_option"
        android:layout_width="293dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/recurring"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pending_view_option" />

</androidx.constraintlayout.widget.ConstraintLayout>